feat(user-management): add organization-scoped user management and RBAC